Fix Image Allignment
Image alignment in `404.html` was not centered, fixed by adding the following
`  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;`

--- a/style.css
+++ b/style.css
@@ -250,6 +250,10 @@ body::-webkit-scrollbar-thumb {
 .pagenotfoundlogo {
   width: 256px;
   height: 256px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .pagenotfoundtext {
